# grainger_recommendations_chatbot

./: A2-create_grainger_product_data_frame.ipynb  A3-set-up_bedrock.ipynb  A4-grainger_client_advisor.ipynb  B1_initial_response_getter.ipynb  B1_product_image_getter.ipynb  Dockerfile  README.md  aistylist.ipynb  all_product_codes.json  aws_access_key_id  aws_secret_access_key  bedrock_assume_role  bedrock_initializer.py  call_for_single_product_review.ipynb  call_selenium_for_review_async.py  crawler.ipynb  create_grainger_product_data_frame.ipynb  data_by_json.ipynb  data_frame_initializer.py  deploy_grainger.sh  deployment.yaml  docker-compose.yml  grainger_product_crawler.ipynb  initialize_vector_index.py  install_chrome_chromedriver.sh  intro_to_bedrock.ipynb  launch_ec2_instance.sh  launch_ec2_instance_prebuilt.sh  nohup.out  obtain_product_reviews.ipynb  obtain_product_reviews.py  pyproject.toml  requirements.txt  restart.sh  stack.yml  stack_post_ec2_deployment.sh  start.sh  start_local.sh  start_local_fast_api.sh  streamlit-deployment.yaml  (+10 more)
.ipynb_checkpoints/: A2-create_grainger_product_data_frame-checkpoint.ipynb  A3-set-up_bedrock-checkpoint.ipynb  A4-grainger_client_advisor-checkpoint.ipynb  aistylist-checkpoint.ipynb
legacy/: A2-create_grainger_product_data_frame.ipynb  A3-set-up_bedrock.ipynb  A4-grainger_client_advisor.ipynb  B1_initial_response_getter.ipynb  B1_product_review_getter.ipynb  aistylist.ipynb  call_for_single_product_review.ipynb  crawler_to_extract_product_codes.ipynb  data_frame_initializer.py  start_local.sh  trial.ipynb  vector_index.py  (+3 more)
(+89 files in other folders)
